Fix color contrast of text
Continuing
https://github.com/houndci/hound/commit/9f88514d0edc477e034302e33d27a0d0119d6a80

By increasing the contrast between foreground and background colors we
help those with low vision impairments and color deficiencies read and
navigate our content.

This change meets WCAG 2.0 AA contrast ratio thresholds and removes 12
violations thrown by [axe-core](https://github.com/dequelabs/axe-core)
when run on the home page.

--- a/app/assets/stylesheets/base/_buttons.scss
+++ b/app/assets/stylesheets/base/_buttons.scss
@@ -1,10 +1,11 @@
 button:disabled {
-  border-color: $inactive-color;
-  color: $inactive-color;
+  border-color: $base-border-color;
+  color: $base-font-color;
 
   &:hover {
     background-color: transparent;
-    color: $inactive-color;
+    border-color: $base-border-color;
+    color: $base-font-color;
   }
 }
 
