--- a/app/assets/stylesheets/base/_tables.scss
+++ b/app/assets/stylesheets/base/_tables.scss
@@ -17,7 +17,6 @@ table {
 
   th {
     background-color: $table-heading-background-color;
-    color: $light-font-color;
     font-size: 0.8em;
     font-weight: 600;
     letter-spacing: 1px;
