--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -17,7 +17,6 @@ $javascript: rgb(246, 221, 0);
 $coffee-script: rgb(19, 18, 38);
 $scss: rgb(196, 73, 137);
 
-$inactive-color: #999;
 $active-color: $teal;
 $repo-list-toggle-size: 1.5rem;
 
@@ -26,7 +25,6 @@ $base-text-shadow: 0 1px 2px rgba($black, 0.2);
 $base-background-color: rgb(248, 248, 248);
 $base-border-color: rgb(220, 220, 220);
 $base-font-color: rgb(100, 100, 100);
-$light-font-color: rgb(190, 190, 190);
 $medium-font-color: rgb(140, 140, 140);
 $base-accent-color: $purple;
 $base-secondary-color: lighten($purple, 10%);
