--- a/app/assets/stylesheets/pages/repos/_onboarding.scss
+++ b/app/assets/stylesheets/pages/repos/_onboarding.scss
@@ -75,7 +75,6 @@
     }
 
     p {
-      color: $light-font-color;
       margin: 0;
     }
   }
